--- a/myproject/templates/about.html
+++ b/myproject/templates/about.html
@@ -108,7 +108,7 @@
                 </li>
             </ul>
             <!-- <a href="/about" class="cta-button">Learn More About Us</a> -->
-            <a href="{% url 'my_projects' %}" class="cta-button">View My Projects</a>
+            <a href="{% url 'my_project' %}" class="cta-button">View My Projects</a>
             <a href="/contact" class="cta-button">Contact Us</a>
         </div>
     </main>
